Modified REST API and added unit tests.
Done:
- Updated all existing unit tests.
- Updated documentation.
-
